# py-bed

./: README.md  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
app/: app.py
tests/: test_main.py
