[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-project"
version = "0.1.0"
description = "A mock project to test CI/CD pipeline"
authors = [
    { name = "Bjorn Emborg", email = "bjorn.emborg@extras.com" }
]
dependencies = [
    "requests>=2.25.1",
    "flask>=2.0.1"
]